--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,3 @@
 .vscode/settings.json
 .vscode/launch.json
-mk_sing/hosts
-mk_sing_20200713085148/hosts
-mk_sing_20200713085148/svr1/broker.access
-mk_sing_20200713085148/svr1/cubrid_broker.conf
-mk_sing_20200713085148/svr1/cubrid_ha.conf
-mk_sing_20200713085148/svr1/cubrid.conf
-mk_sing_20200713085148/svr1/databases.txt
-mk_sing_20200713085148/svr1/db.access
-mk_sing_20200713085148/svr2/broker.access
-mk_sing_20200713085148/svr2/cubrid_broker.conf
-mk_sing_20200713085148/svr2/cubrid_ha.conf
-mk_sing_20200713085148/svr2/cubrid.conf
-mk_sing_20200713085148/svr2/databases.txt
-mk_sing_20200713085148/svr2/db.access
-mk_sing_20200713085701/hosts
-mk_sing_20200713085701/svr1/broker.access
-mk_sing_20200713085701/svr1/cubrid_broker.conf
-mk_sing_20200713085701/svr1/cubrid_ha.conf
-mk_sing_20200713085701/svr1/cubrid.conf
-mk_sing_20200713085701/svr1/databases.txt
-mk_sing_20200713085701/svr1/db.access
-mk_sing_20200713085701/svr2/broker.access
-mk_sing_20200713085701/svr2/cubrid_broker.conf
-mk_sing_20200713085701/svr2/cubrid_ha.conf
-mk_sing_20200713085701/svr2/cubrid.conf
-mk_sing_20200713085701/svr2/databases.txt
-mk_sing_20200713085701/svr2/db.access
+mk_sing*
