--- a/separate_cubrid_conf.yml
+++ b/separate_cubrid_conf.yml
@@ -5,8 +5,11 @@
 # cubrid_home: '/home/cubrid1/CUBRID'
 # account: 'cubrid1'
 
-svc_name: 'mk_sep'
+svc_name: 'basic'
 max_clients: '200'
+pc_ip:
+  - '133.133.133.133'
+  - '134.134.*'
 app_ip:
   - '132.132.132.132'
   - '111.111.111.111'
@@ -17,7 +20,7 @@ svr_info:
   - name: 'svr2'
     ip: '123.123.123.124'    
 role_info:
-  - db: 'db1'
+  - db: 'basic'
     ha: 'svr1:svr2'
 broker_info:
   - location: 'svr1'
