--- a/example_yml/separate_cubrid_conf.yml
+++ b/example_yml/separate_cubrid_conf.yml
@@ -4,27 +4,26 @@
 # given by parameter
 # cubrid_home: '/home/cubrid1/CUBRID'
 # account: 'cubrid1'
-# svr_info: all ip address of server
 
 svc_name: 'basic'
 max_clients: '200'
 pc_ip:
-  - '133.133.133.133'
+  - '10.0.2.10'
   - '134.134.*'
 app_ip:
-  - '132.132.132.132'
+  - '10.0.2.20'
   - '111.111.111.111'
   - '133.133.133.133' 
 svr_info:
-  - name: 'svr1'
-    ip: '123.123.123.123'
-  - name: 'svr2'
-    ip: '123.123.123.124'    
+  - name: 'center'
+    ip: '10.0.2.10'
+  - name: 'cubrid1'
+    ip: '10.0.2.20'    
 role_info:
   - db: 'basic'
-    ha: 'svr1:svr2'
+    ha: 'center:cubrid1'
 broker_info:
-  - location: 'svr1'
+  - location: 'center'
     brokers: 
       - name: 'brk1'
         mode: 'rw'
@@ -32,12 +31,12 @@ broker_info:
         min_cas: '20'
         max_cas: '30'
         svc_on_off: 'on'
-        db: 'db1'
+        db: 'basic'
       - mode: 'rw'
         name: 'brk2'
         port: '34000'
-        db: 'db1'
-  - location: svr2
+        db: 'basic'
+  - location: cubrid1
     brokers: 
       - name: 'brk1'
         mode: 'rw'
@@ -45,9 +44,9 @@ broker_info:
         min_cas: '20'
         max_cas: '30'
         svc_on_off: 'on'
-        db: 'db1'
+        db: 'basic'
       - mode: 'rw'
         name: 'brk2'
-        port: '35000'
-        db: 'db1'
+        port: '34000'
+        db: 'basic'
 ...
