--- a/example_yml/replica_cubrid_conf.yml
+++ b/example_yml/replica_cubrid_conf.yml
@@ -10,10 +10,7 @@ role_info:
     replica: 'svr6:svr7'
 master_shm_id: '30001'
 max_clients: '230'
-app_ip:
-  - '132.132.132.132'
-  - '111.111.111.111'
-  - '133.133.133.133' 
+app_ip: '132.132.132.132;111.111.111.111;133.133.133.133'
 svr_info:
   - name: svr1
     ip: '123.123.123.123'
