--- a/example_yml/single_cubrid_conf.yml
+++ b/example_yml/single_cubrid_conf.yml
@@ -8,10 +8,8 @@
 svc_name: 'mk_sing'
 master_shm_id: '30001'
 max_clients: '110'
-app_ip:
-  - '132.132.132.132'
-  - '111.111.111.111'
-  - '133.133.133.133' 
+pc_ip: '10.0.2.10;134.134.*'
+app_ip: '10.0.2.20;111.111.111.111;133.133.133.133'
 svr_info:
   - name: 'svr1'
     ip: '123.123.123.123'
